fixed villages alignment for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -369,6 +369,9 @@ mark,.mark {
 .text-left {
     text-align: left
 }
+.text-left-xs-center {
+    text-align: left
+}
 
 .text-right {
     text-align: right
@@ -6621,6 +6624,9 @@ nav li a.current,nav li a:hover {
 
     .prize-img-wrapper img {
         max-width: 110px
+    }
+    .text-left-xs-center {
+        text-align: center;
     }
 }
 
